kubernetes/production/data-service-graphdb-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    software.uncharted.terarium: data-service-graphdb
  name: data-service-graphdb
  namespace: terarium
spec:
  replicas: 1
  selector:
    matchLabels:
      software.uncharted.terarium: data-service-graphdb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        software.uncharted.terarium: data-service-graphdb
    spec:
      containers:
        - image: neo4j:latest
          name: data-service-graphdb
          ports:
            - containerPort: 7474
            - containerPort: 7687
          resources: {}
      restartPolicy: Always
status: {}
