kubernetes/production/document-server-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    software.uncharted.terarium/name: document-service
  name: document-service
  namespace: terarium
spec:
  replicas: 1
  selector:
    matchLabels:
      software.uncharted.terarium/name: document-service
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        software.uncharted.terarium/name: document-service
    spec:
      containers:
        - image: ghcr.io/darpa-askem/document-service:latest
          name: document-service
          ports:
            - containerPort: 3030
          resources: {}
      restartPolicy: Always
status: {}
