kubernetes/production/gateway-httpd-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    software.uncharted.terarium: gateway-httpd
  name: gateway-httpd
  namespace: terarium
spec:
  replicas: 1
  selector:
    matchLabels:
      software.uncharted.terarium: gateway-httpd
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        software.uncharted.terarium: gateway-httpd
    spec:
      containers:
        - image: ghcr.io/unchartedsoftware/httpd-openidc:0.1.2
          name: gateway-httpd
          ports:
            - containerPort: 80
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: htdocs-volume
              mountPath: /usr/local/apache2/htdocs
            - name: config-volume
              mountPath: /usr/local/apache2/conf/default
            - name: httpd-foreground-volume
              mountPath: /usr/local/bin
      volumes:
        - name: htdocs-volume
          configMap:
            name: gateway-httpd-htdocs
        - name: config-volume
          configMap:
            name: gateway-httpd-config
        - name: httpd-foreground-volume
          configMap:
            name: gateway-httpd-exec
            defaultMode: 0500
      restartPolicy: Always
status: {}
