kubernetes/production/gateway-keycloak-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    software.uncharted.terarium: gateway-keycloak
  name: gateway-keycloak
  namespace: terarium
spec:
  replicas: 1
  selector:
    matchLabels:
      software.uncharted.terarium: gateway-keycloak
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        software.uncharted.terarium: gateway-keycloak
    spec:
      containers:
        - image: ghcr.io/unchartedsoftware/keycloak:0.1.2
          name: gateway-keycloak
          args:
            - start
          ports:
            - containerPort: 8443
              protocol: TCP
          volumeMounts:
            - name: theme-volume
              mountPath: /opt/keycloak/themes/terarium
            - name: certificates-volume
              mountPath: /certificates
          resources: {}
      restartPolicy: Always
      imagePullSecrets:
        - name: ghcr-cred
      volumes:
        - name: realm-volume
          configMap:
            name: gateway-keycloak-realm
        - name: certificates-volume
          configMap:
            name: gateway-certificates
            defaultMode: 0644
        - name: theme-volume
          emptyDir: {}
status: {}
