kubernetes/production/hmi-client-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    software.uncharted.terarium: hmi-client
  name: hmi-client
  namespace: terarium
spec:
  replicas: 1
  selector:
    matchLabels:
      software.uncharted.terarium: hmi-client
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        software.uncharted.terarium: hmi-client
    spec:
      containers:
        - image: ghcr.io/darpa-askem/hmi-client:latest
          name: hmi-client
          ports:
            - containerPort: 80
          resources: {}
      imagePullSecrets:
        - name: ghcr-cred
      restartPolicy: Always
status: {}
