kubernetes/production/hmi-server-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    software.uncharted.terarium/name: hmi-server
  name: hmi-server
  namespace: terarium
spec:
  replicas: 1
  selector:
    matchLabels:
      software.uncharted.terarium/name: hmi-server
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        software.uncharted.terarium/name: hmi-server
    spec:
      containers:
        - image: ghcr.io/darpa-askem/hmi-server:latest
          name: hmi-server
          ports:
            - containerPort: 8080
          resources: {}
      imagePullSecrets:
        - name: ghcr-cred
      restartPolicy: Always
status: {}
