kubernetes/production/data-service-graphdb-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: data-service-graphdb
  namespace: terarium
spec:
  ports:
    - name: 7474-tcp
      port: 7474
      protocol: TCP
      targetPort: 7474
    - name: 7687-tcp
      port: 7687
      protocol: TCP
      targetPort: 7687
  selector:
    software.uncharted.terarium: data-service-graphdb
