kubernetes/production/data-service-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: data-service
  namespace: terarium
spec:
  #type: NodePort
  ports:
    - name: 3020-tcp
      port: 3020
      protocol: TCP
      targetPort: 8000
  selector:
    software.uncharted.terarium: data-service
