kubernetes/production/document-server-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: document-server
spec:
  ports:
    - name: 3030-tcp
      port: 3030
      protocol: TCP
      targetPort: 3030
  selector:
    software.uncharted.terarium: document-server
  type: LoadBalancer
status:
  loadBalancer: {}
