kubernetes/production/gateway-httpd-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-httpd
  namespace: terarium
spec:
  type: NodePort
  ports:
    - name: 8078-tcp
      port: 8078
      protocol: TCP
      targetPort: 80
  selector:
    software.uncharted.terarium/name: gateway-httpd
