kubernetes/production/gateway-keycloak-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-keycloak
  namespace: terarium
spec:
  ports:
    - name: 443-keycloak-internal-tcp
      port: 443
      protocol: TCP
      targetPort: 8443
  selector:
    software.uncharted.terarium/name: gateway-keycloak
