kubernetes/production/hmi-server-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hmi-server
  namespace: terarium
spec:
  ports:
    - name: 3000-tcp
      port: 3000
      protocol: TCP
      targetPort: 8080
  selector:
    software.uncharted.terarium/name: hmi-server
