kubernetes/production/model-service-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: model-service
  namespace: terarium
spec:
  ports:
    - name: 3010-tcp
      port: 3010
      protocol: TCP
      targetPort: 8888
  selector:
    software.uncharted.terarium/name: model-service
