kubernetes/production/gateway-keycloak-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: terarium
  name: gateway-keycloak
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/security-groups: askem-prod-web-private
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:243706056861:certificate/b8ac3aba-1bf7-4ebe-815b-21657eaf6023
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '443'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-keycloak
                port:
                  number: 8079
